--- a/index.html
+++ b/index.html
@@ -31,27 +31,125 @@
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
-          <a href="#" class="navigation-link">
-            <span class="visually-hidden">Поиск</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a href="#" class="navigation-link">
-            <span class="visually-hidden">Избранное</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a href="#" class="navigation-link">
-            <span class="visually-hidden">Подбор гостиницы</span>
-            Хочу сюда
-          </a>
-        </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">
+              <span class="visually-hidden">Подбор гостиницы</span>
+              Хочу сюда
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
-
-
+    <main class="main-index">
+      <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+      <header class="main-header">
+        <img src=" " class="" alt="надпись Welcome">
+        <img src=" " class="" alt="надпись to be gorgeous">
+        <img src=" " class="" alt="надпись Sedona because the Grand Canyon sucks!">
+      </header>
+      <section class="advantages">
+        <h2 class="advantages-main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="advantages-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <ol class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <span class="advantages-num">— №1 —</span>
+            <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <ul class="advantages-item features-list">
+              <li class="advantages-item">
+                <h3 class="advantages-title">Жильё</h3>
+                <p class="advantages-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
+              <li class="advantages-item">
+                <h3 class="advantages-title">Еда</h3>
+                <p class="advantages-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="advantages-item">
+                <h3 class="advantages-title">Сувениры</h3>
+                <p class="advantages-desc">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <span class="advantages-num">— №2 —</span>
+            <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <span class="advantages-num">— №3 —</span>
+            <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <span class="advantages-num">— №4 —</span>
+            <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <span class="advantages-num">— №5 —</span>
+            <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ol>
+      </section>
+      <section class="search">
+        <h2 class="search-title">Заинтересовались?</h2>
+        <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a href="#" class="search-btn">Поиск гостиницы в Cедоне</a>
+      </section>
+      <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
+          <label class="newsletter-label">
+            <span class="visually-hidden">Введите ваш e-mail:</span>
+            <input name="newsletter" type="email" placeholder="Ваш e-mail">
+          </label>
+          <button class="newsletter-btn">Подписаться</button>
+        </form>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <h2 class="visually-hidden">Контакты</h2>
+      <section class="footer-social">
+        <h3 class="visually-hidden">Наши социальные сети</h3>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Vkontakte</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Telegram</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-contacts">
+        <h3 class="visually-hidden">Наш номер телефона</h3>
+        <a href="tel:+78128121212" class="footer-tel">+7 (812) 812-12-12</a>
+      </section>
+      <section class="footer-copy">
+        <h3 class="visually-hidden">Сайт сделан:</h3>
+        <a href="https://htmlacademy.ru" class="copy-logo"></a>
+      </section>
+    </footer>
 
   </body>
 </html>
