--- a/index.html
+++ b/index.html
@@ -42,17 +42,14 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">
-              <span class="visually-hidden">Подбор гостиницы</span>
-              Хочу сюда
-            </a>
+            <a href="#" class="navigation-link button">Хочу сюда</a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="main-index">
-      <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
       <header class="main-header">
+        <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
         <img src=" " class="" alt="надпись Welcome">
         <img src=" " class="" alt="надпись to be gorgeous">
         <img src=" " class="" alt="надпись Sedona because the Grand Canyon sucks!">
@@ -105,7 +102,7 @@
       <section class="search">
         <h2 class="search-title">Заинтересовались?</h2>
         <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a href="#" class="search-btn">Поиск гостиницы в Cедоне</a>
+        <a href="#" class="button">Поиск гостиницы в Cедоне</a>
       </section>
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
@@ -115,7 +112,7 @@
             <span class="visually-hidden">Введите ваш e-mail:</span>
             <input name="newsletter" type="email" placeholder="Ваш e-mail">
           </label>
-          <button class="newsletter-btn">Подписаться</button>
+          <button class="button">Подписаться</button>
         </form>
       </section>
     </main>
