--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SEDONA</title>
+    <title>Сайт отелей в городе Седона</title>
   </head>
   <body>
     <header class="page-header">
       <nav class="navigation">
+        <a href="index.html" class="navigation-logo">
+          <span class="visually-hidden">Логотип</span>
+        </a>
         <ul class="navigation-list">
-          <li class="navigation-item navigation-logo">
-            <a href="#" class="navigation-link">
-               <span class="visually-hidden">Логотип</span>
-            </a>
-          </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">
+            <a href="index.html" class="navigation-link">
               Главная
             </a>
           </li>
@@ -32,17 +30,20 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a href="#" class="navigation-link">
+            <a href="#" class="navigation-link search">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link">
+            <a href="#" class="navigation-link add-favorites">
               <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">12 товаров в избранном</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link button">Хочу сюда</a>
+            <a href="#" class="navigation-link button search-button">
+              Хочу сюда
+            </a>
           </li>
         </ul>
       </nav>
@@ -50,9 +51,9 @@
     <main class="main-index">
       <header class="main-header">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-        <img src=" " class="" alt="надпись Welcome">
-        <img src=" " class="" alt="надпись to be gorgeous">
-        <img src=" " class="" alt="надпись Sedona because the Grand Canyon sucks!">
+        <img src=" " class="" alt="Welcome">
+        <img src=" " class="" alt="to be gorgeous">
+        <img src=" " class="" alt="Sedona: because the Grand Canyon sucks!">
       </header>
       <section class="advantages">
         <h2 class="advantages-main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -102,8 +103,10 @@
       <section class="search">
         <h2 class="search-title">Заинтересовались?</h2>
         <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a href="#" class="button">Поиск гостиницы в Cедоне</a>
+        <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
       </section>
+    </main>
+    <footer class="page-footer">
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -112,41 +115,38 @@
             <span class="visually-hidden">Введите ваш e-mail:</span>
             <input name="newsletter" type="email" placeholder="Ваш e-mail">
           </label>
-          <button class="button">Подписаться</button>
+          <button class="button subscribe-button">Подписаться</button>
         </form>
       </section>
-    </main>
-    <footer class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
       <section class="footer-social">
         <h3 class="visually-hidden">Наши социальные сети</h3>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="social-link" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Vkontakte</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy">
+            <a class="social-link" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Youtube</span>
             </a>
           </li>
         </ul>
       </section>
-      <section class="footer-contacts">
+      <section class="footer-phone">
         <h3 class="visually-hidden">Наш номер телефона</h3>
         <a href="tel:+78128121212" class="footer-tel">+7 (812) 812-12-12</a>
       </section>
-      <section class="footer-copy">
+      <section class="footer-copyright">
         <h3 class="visually-hidden">Сайт сделан:</h3>
-        <a href="https://htmlacademy.ru" class="copy-logo"></a>
+        <a href="https://htmlacademy.ru" class="copyright-logo"></a>
       </section>
     </footer>
-
   </body>
 </html>
