--- a/index.html
+++ b/index.html
@@ -30,18 +30,21 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a href="#" class="navigation-link search">
+            <a href="" class="navigation-link search">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link add-favorites">
+            <a href="" class="navigation-link favorites">
               <span class="visually-hidden">Избранное</span>
-              <span class="visually-hidden">12 товаров в избранном</span>
+              <div class="favorites-added">
+                <span class="visually-hidden">Гостиниц в избранном:</span>
+                <span class="favorites-counter">12</span>
+              </div>
             </a>
           </li>
           <li class="navigation-item">
-            <a href="#" class="navigation-link button search-button">
+            <a href="catalog.html" class="navigation-link button search-button">
               Хочу сюда
             </a>
           </li>
@@ -51,12 +54,11 @@
     <main class="main-index">
       <header class="main-header">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-        <img src=" " class="" alt="Welcome">
-        <img src=" " class="" alt="to be gorgeous">
-        <img src=" " class="" alt="Sedona: because the Grand Canyon sucks!">
+        <img src="" class="" alt="Welcome to the gorgeous Sedona: because the Grand Canyon sucks!">
       </header>
       <section class="advantages">
-        <h2 class="advantages-main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
+        <p class="advantages-main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
           <li class="advantages-item">
@@ -65,15 +67,15 @@
             <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <ul class="advantages-item features-list">
               <li class="advantages-item">
-                <h3 class="advantages-title">Жильё</h3>
+                <h4 class="advantages-title">Жильё</h4>
                 <p class="advantages-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="advantages-item">
-                <h3 class="advantages-title">Еда</h3>
+                <h4 class="advantages-title">Еда</h4>
                 <p class="advantages-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="advantages-item">
-                <h3 class="advantages-title">Сувениры</h3>
+                <h4 class="advantages-title">Сувениры</h4>
                 <p class="advantages-desc">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
@@ -101,12 +103,11 @@
         </ol>
       </section>
       <section class="search">
-        <h2 class="search-title">Заинтересовались?</h2>
+        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+        <p class="search-title">Заинтересовались?</p>
         <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
       </section>
-    </main>
-    <footer class="page-footer">
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
         <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -118,6 +119,8 @@
           <button class="button subscribe-button">Подписаться</button>
         </form>
       </section>
+    </main>
+    <footer class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
       <section class="footer-social">
         <h3 class="visually-hidden">Наши социальные сети</h3>
@@ -144,7 +147,7 @@
         <a href="tel:+78128121212" class="footer-tel">+7 (812) 812-12-12</a>
       </section>
       <section class="footer-copyright">
-        <h3 class="visually-hidden">Сайт сделан:</h3>
+        <h3 class="visually-hidden">Сайт сделан</h3>
         <a href="https://htmlacademy.ru" class="copyright-logo"></a>
       </section>
     </footer>
