Update catalog.html stars

--- a/Catalog.html
+++ b/Catalog.html
@@ -134,7 +134,7 @@
               <input class="control-input" type="range" min="0" max="9000">
             </label>
           </fieldset>
-          <button class="filter-button button " type="submit">Применить</button>
+          <button class="filter-button button" type="submit">Применить</button>
           <a class="reset-link" href="#">Сбросить</a>
         </form>
       </section>
@@ -172,6 +172,10 @@
             <button type="button" class="hotel-favorites button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">4 звезды</span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
             </div>
             <span class="hotel-rating">Рейтинг 8,5</span>
           </li>
@@ -184,6 +188,10 @@
             <button type="button" class="hotel-favorites button added-favorites">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">4 звезды</span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
             </div>
             <span class="hotel-rating">Рейтинг 9,2</span>
           </li>
@@ -196,6 +204,9 @@
             <button type="button" class="hotel-favorites button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">3 звезды</span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
             </div>
             <span class="hotel-rating">Рейтинг 6,9</span>
           </li>
@@ -208,6 +219,8 @@
             <button type="button" class="hotel-favorites button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">2 звезды</span>
+              <span class="rating-star"></span>
+              <span class="rating-star"></span>
             </div>
             <span class="hotel-rating">Рейтинг 5,0</span>
           </li>
