Update catalog.html breadcrumbs

--- a/Catalog.html
+++ b/Catalog.html
@@ -54,7 +54,7 @@
     <main class="main-inner">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
-        <ul class="breadcrumbs">
+        <ol class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a href="index.html" class="breadcrumbs-link">
               <span class="visually-hidden">Главная</span>
@@ -63,7 +63,7 @@
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link">Гостиницы</a>
           </li>
-        </ul>
+        </ol>
       </header>
       <section class="catalog-search-form">
         <h2 class="visually-hidden">Подбор гостиницы</h2>
