Add images, update catalog.html and index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a href="index.html" class="navigation-logo">
-          <span class="visually-hidden">Логотип</span>
+          <img src="images/logo.svg" width="139" height="70" alt="Логотип">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -54,7 +54,7 @@
     <main class="main-index">
       <header class="main-header">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-        <img src="" class="" alt="Welcome to the gorgeous Sedona: because the Grand Canyon sucks!">
+        <img src="images/welcome.svg" width="458" height="352" class="" alt="Welcome to the gorgeous Sedona: because the Grand Canyon sucks!">
       </header>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
@@ -65,6 +65,7 @@
             <h3 class="advantages-title">Настоящий городок</h3>
             <span class="advantages-num">— №1 —</span>
             <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
             <ul class="advantages-item features-list">
               <li class="advantages-item">
                 <h4 class="advantages-title">Жильё</h4>
@@ -84,6 +85,7 @@
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <span class="advantages-num">— №2 —</span>
             <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img src="images/photo-2.jpg" width="800" height="384" alt="Узкая скала в каньоне, похожая на мост">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -148,7 +150,9 @@
       </section>
       <section class="footer-copyright">
         <h3 class="visually-hidden">Сайт сделан</h3>
-        <a href="https://htmlacademy.ru" class="copyright-logo"></a>
+        <a href="https://htmlacademy.ru" class="copyright-logo">
+          <img src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип разработчика сайта htmlacademy">
+        </a>
       </section>
     </footer>
   </body>
