--- a/Catalog.html
+++ b/Catalog.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a href="index.html" class="navigation-logo">
-          <span class="visually-hidden">Логотип</span>
+          <img src="images/logo.svg" width="139" height="70" alt="Логотип">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -164,7 +164,7 @@
         </ul>
         <ul class="hotel-list">
           <li class="hotel-item">
-            <img src="" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
+            <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
             <h3 class="hotel-name">Amara Resort & Spa</h3>
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 4000 ₽</span>
@@ -180,7 +180,7 @@
             <span class="hotel-rating">Рейтинг 8,5</span>
           </li>
           <li class="hotel-item">
-            <img src="" alt="горный хребет, над которым радуга" class="hotel-image">
+            <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="горный хребет, над которым радуга" class="hotel-image">
             <h3 class="hotel-name">Villas at Poco Diablo</h3>
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 5000 ₽</span>
@@ -196,7 +196,7 @@
             <span class="hotel-rating">Рейтинг 9,2</span>
           </li>
           <li class="hotel-item">
-            <img src="" alt="скала в пустыне" class="hotel-image">
+            <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="скала в пустыне" class="hotel-image">
             <h3 class="hotel-name">Desert Quail Inn</h3>
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 2500 ₽</span>
@@ -211,7 +211,7 @@
             <span class="hotel-rating">Рейтинг 6,9</span>
           </li>
           <li class="hotel-item">
-            <img src="" alt="горная гряда на закате" class="hotel-image">
+            <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="горная гряда на закате" class="hotel-image">
             <h3 class="hotel-name">GreenTree Inn</h3>
             <span class="hotel-type">Гостиница</span>
             <span class="hotel-price">От 1500 ₽</span>
@@ -292,7 +292,9 @@
       </section>
       <section class="footer-copyright">
         <h3 class="visually-hidden">Сайт сделан</h3>
-        <a href="https://htmlacademy.ru" class="copyright-logo"></a>
+        <a href="https://htmlacademy.ru" class="copyright-logo">
+          <img src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип разработчика сайта htmlacademy">
+        </a>
       </section>
     </footer>
   </body>
