--- a/catalog.html
+++ b/catalog.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Каталог гостиниц в SEDONA</title>
+    <title>Каталог гостиниц в Седоне</title>
   </head>
   <body>
     <header class="page-header">
+      <a href="index.html" class="logo">
+        <img src="images/logo.svg" width="139" height="70" alt="Логотип">
+      </a>
       <nav class="navigation">
-        <a href="index.html" class="navigation-logo">
-          <img src="images/logo.svg" width="139" height="70" alt="Логотип">
-        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a href="index.html" class="navigation-link">
@@ -18,12 +18,12 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a href="about.html" class="navigation-link">
+            <a href="#" class="navigation-link">
               О Седоне
             </a>
           </li>
           <li class="navigation-item">
-            <a href="catalog.html" class="navigation-link">
+            <a href="catalog.html" class="navigation-link active-link">
               Гостиницы
             </a>
           </li>
@@ -36,11 +36,8 @@
           </li>
           <li class="navigation-item">
             <a href="" class="navigation-link favorites">
-              <span class="visually-hidden">Избранное</span>
-              <div class="favorites-added">
-                <span class="visually-hidden">Гостиниц в избранном:</span>
-                <span class="favorites-counter">12</span>
-              </div>
+              <span class="visually-hidden">Гостиниц в избранном:</span>
+              <span class="favorites-counter">12</span>
             </a>
           </li>
           <li class="navigation-item">
@@ -61,7 +58,7 @@
             </a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Гостиницы</a>
+            <a>Гостиницы</a>
           </li>
         </ol>
       </header>
@@ -122,13 +119,13 @@
             <legend class="catalog-filter-title">
               Стоимость, ₽:
             </legend>
-            <label class="control">
-              <input class="control-input" type="text" name="min-price" placeholder="0">
+            <label class="control min-price">
               От
+              <input class="control-input" type="text" name="min-price" placeholder="0">
             </label>
-            <label class="control">
-              <input class="control-input" type="text" name="max-price" placeholder="9000">
+            <label class="control max-price">
               До
+              <input class="control-input" type="text" name="max-price" placeholder="9000">
             </label>
             <label class="control">
               <input class="control-input" type="range" min="0" max="9000">
@@ -164,63 +161,70 @@
         </ul>
         <ul class="hotel-list">
           <li class="hotel-item">
-            <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
-            <h3 class="hotel-name">Amara Resort & Spa</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 4000 ₽</span>
+            <a href="#" class="hotel-link">
+              <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
+              <h3 class="hotel-name">Amara Resort & Spa</h3>
+            </a>
+            <dl>
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 4000 ₽</dd>
+            </dl>
             <a href="#" class="hotel-about button">Подробнее</a>
             <button type="button" class="hotel-favorites button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">4 звезды</span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
+              <span class="rating-star">4</span>
             </div>
             <span class="hotel-rating">Рейтинг 8,5</span>
           </li>
           <li class="hotel-item">
-            <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="горный хребет, над которым радуга" class="hotel-image">
-            <h3 class="hotel-name">Villas at Poco Diablo</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 5000 ₽</span>
+            <a href="#" class="hotel-link">
+              <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="горный хребет, над которым радуга" class="hotel-image">
+              <h3 class="hotel-name">Villas at Poco Diablo</h3>
+            </a>
+            <dl>
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 5000 ₽</dd>
+            </dl>
             <a href="#" class="hotel-about button">Подробнее</a>
             <button type="button" class="hotel-favorites button added-favorites">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">4 звезды</span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
+              <span class="rating-star">4</span>
             </div>
             <span class="hotel-rating">Рейтинг 9,2</span>
           </li>
           <li class="hotel-item">
-            <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="скала в пустыне" class="hotel-image">
-            <h3 class="hotel-name">Desert Quail Inn</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 2500 ₽</span>
+            <a href="#" class="hotel-link">
+              <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="скала в пустыне" class="hotel-image">
+              <h3 class="hotel-name">Desert Quail Inn</h3>
+            </a>
+            <dl>
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 2500 ₽</dd>
+            </dl>
             <a href="#" class="hotel-about button">Подробнее</a>
             <button type="button" class="hotel-favorites button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">3 звезды</span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
+              <span class="rating-star">3</span>
             </div>
             <span class="hotel-rating">Рейтинг 6,9</span>
           </li>
           <li class="hotel-item">
-            <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="горная гряда на закате" class="hotel-image">
-            <h3 class="hotel-name">GreenTree Inn</h3>
-            <span class="hotel-type">Гостиница</span>
-            <span class="hotel-price">От 1500 ₽</span>
+            <a href="#" class="hotel-link">
+              <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="горная гряда на закате" class="hotel-image">
+              <h3 class="hotel-name">GreenTree Inn</h3>
+            </a>
+            <dl>
+              <dt class="hotel-type">Гостиница</dt>
+              <dd class="hotel-price">От 1500 ₽</dd>
+            </dl>
             <a href="#" class="hotel-about button">Подробнее</a>
             <button type="button" class="hotel-favorites button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">2 звезды</span>
-              <span class="rating-star"></span>
-              <span class="rating-star"></span>
+              <span class="rating-star">2</span>
             </div>
             <span class="hotel-rating">Рейтинг 5,0</span>
           </li>
@@ -249,6 +253,7 @@
           <span class="hotel-counter-title">Гостиниц на странице</span>
           <select class="select-control" aria-label="Количество элементов на странице">
             <option value="4">4</option>
+            <option value="4">8</option>
           </select>
         </label>
       </section>
