--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Сайт отелей в городе Седона</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
     <header class="page-header">
+      <a href="index.html" class="logo">
+        <img src="images/logo.svg" width="139" height="70" alt="Логотип">
+      </a>
       <nav class="navigation">
-        <a href="index.html" class="navigation-logo">
-          <img src="images/logo.svg" width="139" height="70" alt="Логотип">
-        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a href="index.html" class="navigation-link">
+            <a href="index.html" class="navigation-link active-link">
               Главная
             </a>
           </li>
           <li class="navigation-item">
-            <a href="about.html" class="navigation-link">
+            <a href="#" class="navigation-link">
               О Седоне
             </a>
           </li>
@@ -36,11 +37,8 @@
           </li>
           <li class="navigation-item">
             <a href="" class="navigation-link favorites">
-              <span class="visually-hidden">Избранное</span>
-              <div class="favorites-added">
                 <span class="visually-hidden">Гостиниц в избранном:</span>
                 <span class="favorites-counter">12</span>
-              </div>
             </a>
           </li>
           <li class="navigation-item">
