--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+
+    <!-- ШАПКА -->
     <header class="page-header">
       <a href="index.html" class="logo">
         <img src="images/logo.svg" width="139" height="70" alt="Логотип">
@@ -50,22 +52,26 @@
       </nav>
     </header>
     <main class="main-index">
+
+      <!-- ПРОМО-БЛОК -->
       <header class="main-header">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-        <img src="images/welcome.svg" width="458" height="352" class="" alt="Welcome to the gorgeous Sedona: because the Grand Canyon sucks!">
+        <img src="images/welcome.svg" width="458" height="352" class="text-over-pict" alt="Welcome to the gorgeous Sedona: because the Grand Canyon sucks!">
       </header>
+
+      <!-- ПРЕИМУЩЕСТВА -->
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
-        <p class="advantages-main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages-main-title heading">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item blue-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <span class="advantages-num">— №1 —</span>
             <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
-            <ul class="advantages-item features-list">
-              <li class="advantages-item">
+            <ul class="advantages-more features-list">
+              <li class="advantages-item dark-blue-item">
                 <h4 class="advantages-title">Жильё</h4>
                 <p class="advantages-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
@@ -73,43 +79,47 @@
                 <h4 class="advantages-title">Еда</h4>
                 <p class="advantages-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="advantages-item">
+              <li class="advantages-item dark-blue-item">
                 <h4 class="advantages-title">Сувениры</h4>
                 <p class="advantages-desc">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item blue-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <span class="advantages-num">— №2 —</span>
             <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img src="images/photo-2.jpg" width="800" height="384" alt="Узкая скала в каньоне, похожая на мост">
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item light-blue-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
             <span class="advantages-num">— №3 —</span>
             <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item dark-blue-item">
             <h3 class="advantages-title">Красивая дорога</h3>
             <span class="advantages-num">— №4 —</span>
             <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item light-blue-item">
             <h3 class="advantages-title">Мало туристов</h3>
             <span class="advantages-num">— №5 —</span>
             <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
       </section>
-      <section class="search">
+
+      <!-- ПОИСК ГОСТИНИЦЫ -->
+      <section class="search-form">
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-        <p class="search-title">Заинтересовались?</p>
-        <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a href="#" class="button search-button">Поиск гостиницы в Cедоне</a>
+        <p class="search-form-title heading">Заинтересовались?</p>
+        <p class="search-form-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a href="#" class="button search-form-button">Поиск гостиницы в Cедоне</a>
       </section>
+
+      <!-- РАССЫЛКА -->
       <section class="newsletter">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <h2 class="newsletter-title heading">Подпишитесь на рассылку</h2>
         <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
           <label class="newsletter-label">
@@ -120,6 +130,8 @@
         </form>
       </section>
     </main>
+
+    <!-- ФУТЕР -->
     <footer class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
       <section class="footer-social">
